tdf#164354 skip unnecessary transparency removal when printing

On macOS, there are no known problems drawing semi-transparent
shapes, fill, text, and bitmaps so only remove transparency when
reduce transparency and no transparency print settings are both
true.

The fix not only eliminates the sometimes lengthy wait for the
native print dialog to appear, but in cases like tdf#164354 the
fix reduces the size of the PDF file generated by the macOS
print subsystem by more than 90%.

The fix was copied from the following NeoOffice source code files
which are licensed under the Mozilla Public License, v. 2.0:

- https://github.com/neooffice/NeoOffice/blob/NeoOffice-2022_7/vcl/source/gdi/print.cxx
- https://github.com/neooffice/NeoOffice/blob/NeoOffice-2022_7/vcl/source/gdi/print2.cxx

Change-Id: I54263a24201a0195fc86df6dc50580e2d6a61c70
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178818
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
(cherry picked from commit fa3dd1c3a190fcbead9d39038a30f0fd306a1baa)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178837
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>